--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,8 @@
-body {
+.body1{
+  background: url(../IMG/pxfuel.com.jpg) no-repeat center;
+  background-size: cover
+}
+.body {
     margin: 0;
     padding: 0;
     background: url(../IMG/Screenshot_34.png) no-repeat center bottom;
@@ -84,3 +88,8 @@ body {
     top: -50px;
     left: calc(50% - 50px);
   }
+  
+
+.card{
+background-color: rgba(0, 0, 0, 0.253);
+}
