--- a/VIEWS/vistaAdmin.html
+++ b/VIEWS/vistaAdmin.html
@@ -113,7 +113,7 @@
                 <button class="btn btn-primary btn-guardar" onclick="guardarPermisos()">Guardar</button>
             </div>
         </div>
-        <a href="#" class="btn btn-dark btn-rounded regresar-btn">Regresar</a>
+        <a href="admin.html" class="btn btn-dark btn-rounded regresar-btn">Regresar</a>
     </body>
     <script src="../JS/script.js"></script>
 </html>
